
  1. Update all dependencies to latest versions.

  2. Delete metadata cache functionality because Cloud Storage has strong
     native list operation consistency already. Deleted properties:

       fs.gs.metadata.cache.enable
       fs.gs.metadata.cache.type
       fs.gs.metadata.cache.directory
       fs.gs.metadata.cache.max.age.info.ms
       fs.gs.metadata.cache.max.age.entry.ms


1.8.1 - 2018-03-29

  1. Add `AUTO` mode support for Cloud Storage Requester Pays feature.

  2. Add support for using Cloud Storage Rewrite requests for copy operation:

       fs.gs.copy.with.rewrite.enable (default: false)

     This allows to copy files between different locations and storage classes.


1.8.0 - 2018-03-15

  1. Support GCS Requester Pays feature that could be configured with new
     properties:

       fs.gs.requester.pays.mode (default=DISABLED)
       fs.gs.requester.pays.project.id (no default value)
       fs.gs.requester.pays.buckets (no default value)

  2. Change relocation package in shaded jar to be connector-specific.

  3. Add support for specifying marker files pattern that should be copied
     last during folder rename operation. Pattern is configured with property:

       fs.gs.marker.file.pattern

  4. Min required Java version now is Java 8.


1.7.0 - 2018-02-22

  1. Fixed an issue where JSON auth files containing user auth e.g.
     application_default_credentials.json does not work with
     google.cloud.auth.service.account.json.keyfile

  2. Honor GOOGLE_APPLICATION_DEFAULT_CREDENTIALS environment variable. For
     Google Application Default Credentials (but not other defaults).

  3. Make fs.gs.project.id optional. It is still required for listing buckets,
     creating buckets, and entire BigQuery connector.

  4. Relocate all dependencies in shaded jar.

  5. Update all dependencies to latest versions.

  6. Disable GCS Metadata Cache by default (e.g. set default value of
     `fs.gs.metadata.cache.enable` property to `false`).

